New dag implementation