@@ -1,11 +1,13 @@
 package graph.jena.examples;
 
 import graph.jena.datatypes.JenaOperandWrapper;
+import graph.jena.operatorsimpl.r2r.BinaryR2RJenaImpl;
+import graph.jena.operatorsimpl.r2r.UnaryR2RJenaImpl;
 import graph.jena.stream.JenaBindingStream;
 import graph.jena.stream.JenaStreamGenerator;
 import graph.jena.sds.SDSJena;
 import graph.jena.content.ValidatedGraph;
-import graph.jena.operatorsimpl.r2r.R2RJenaImpl;
+
 import graph.jena.sds.TimeVaryingFactoryJena;
 import graph.jena.operatorsimpl.r2s.RelationToStreamOpImpl;
 import shared.operatorsimpl.s2r.StreamToRelationOpImpl;
@@ -35,6 +37,7 @@ import shared.contentimpl.factories.AccumulatorContentFactory;
 import shared.operatorsimpl.r2r.DAG.DAGImpl;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -100,12 +103,16 @@ public class polyflowExample {
                         1000,
                         1000);
 
-        RelationToRelationOperator<JenaOperandWrapper> r2rOp = new R2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), false, "selection", "empty");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp1 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_1");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp2 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp.getName()), "partial_2");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp3 = new BinaryR2RJenaImpl("", List.of("partial_1", "partial_2"), "partial_3");
         RelationToStreamOperator<JenaOperandWrapper, Binding> r2sOp = new RelationToStreamOpImpl();
 
         Task<Graph, Graph, JenaOperandWrapper, Binding> task = new TaskImpl<>();
         task = task.addS2ROperator(s2rOp, inputStream)
-                        .addR2ROperator(r2rOp)
+                        .addR2ROperator(r2rOp1)
+                .addR2ROperator(r2rOp2)
+                .addR2ROperator(r2rOp3)
                 .addR2SOperator(r2sOp)
                 .addDAG(new DAGImpl<>())
                 .addSDS(new SDSJena())
